fix: UI: various fixes * Overlapping x-axis labels in Top Cities chart * Formatting of value in tooltip in Top Cities * Underscore in names of cities * Add sample .csv files with data

--- a/ui/src/styles/components/_TopCities.scss
+++ b/ui/src/styles/components/_TopCities.scss
@@ -7,8 +7,19 @@
         }
       }
 
-      .apexcharts-tooltip-marker {
-        background: $scooter !important;
+      .apexcharts {
+        &-tooltip-marker {
+          background: $scooter !important;
+        }
+
+        &-xaxis-label{
+          display: none;
+
+          &:last-child,
+          &:first-child {
+            display: inherit;
+          }
+        }
       }
     }
   }
